<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.silverservers.app.PasswordActivity">

    <TextView
        android:id="@+id/textView_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_login"
        android:textColor="@color/foreground"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText_pw_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username_email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/foreground"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/editText_pw_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/foreground"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:id="@+id/button_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/log_in" />
</LinearLayout>