<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.silverservers.app.MainActivity"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="41dp">

    <TextView
        android:id="@+id/textView_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="113dp"
        android:text="@string/app_title"
        android:textColor="@color/foreground"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_main_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="11dp"
        android:text="@string/log_in"
        android:textColor="@color/foreground"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/button_main_password"
        app:layout_constraintTop_toBottomOf="@+id/textView_main_title" />

    <Button
        android:id="@+id/button_main_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_main_login" />

    <Button
        android:id="@+id/button_main_oauth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="14dp"
        android:text="@string/oauth"
        app:layout_constraintEnd_toEndOf="@+id/button_main_password"
        app:layout_constraintTop_toBottomOf="@+id/button_main_password" />

</androidx.constraintlayout.widget.ConstraintLayout>